force-app/main/default/objects/Scan_export__c/Scan_export__c.object-meta.xml
<CustomObject>
    <label>Scan export</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scans export</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>