force-app/main/default/objects/Scan_export__c/fields/CAB__c.field-meta.xml
<CustomField>
    <fullName>CAB__c</fullName>
    <label>CAB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>