force-app/main/default/objects/Scan_export__c/fields/DESTINATAIRE__c.field-meta.xml
<CustomField>
    <fullName>DESTINATAIRE__c</fullName>
    <label>DESTINATAIRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>