force-app/main/default/objects/Scan_export__c/fields/Erreur_d_tect_e__c.field-meta.xml
<CustomField>
    <fullName>Erreur_d_tect_e__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erreur détectée</label>
    <type>Checkbox</type>
</CustomField>