force-app/main/default/objects/Scan_export__c/fields/EXPEDITEUR__c.field-meta.xml
<CustomField>
    <fullName>EXPEDITEUR__c</fullName>
    <label>EXPEDITEUR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>