force-app/main/default/objects/Scan_export__c/fields/HEURE__c.field-meta.xml
<CustomField>
    <fullName>HEURE__c</fullName>
    <label>HEURE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>