force-app/main/default/objects/Scan_export__c/fields/Opportunite__c.field-meta.xml
<CustomField>
    <fullName>Opportunite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Scans export</relationshipLabel>
    <relationshipName>Scans_export</relationshipName>
    <type>Lookup</type>
</CustomField>