force-app/main/default/objects/Scan_export__c/fields/Sens__c.field-meta.xml
<CustomField>
    <fullName>Sens__c</fullName>
    <label>Sens</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>