force-app/main/default/objects/Scan_export__c/listViews/Scans_du_jour.listView-meta.xml
<ListView>
    <fullName>Scans_du_jour</fullName>
    <columns>CAB__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunite__c</columns>
    <columns>Sens__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>2/3/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>CAB__c</field>
        <operation>notContain</operation>
        <value>4003042NUM091D</value>
    </filters>
    <filters>
        <field>CAB__c</field>
        <operation>notContain</operation>
        <value>4003042NUM091CMT</value>
    </filters>
    <label>Scans du jour</label>
</ListView>