force-app/main/default/objects/Scan_export__c/listViews/Support_Queue_1_Scan_export.listView-meta.xml
<ListView>
    <fullName>Support_Queue_1_Scan_export</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Queue 1</label>
    <queue>Support_Queue_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>